[package]
name = "breakout-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3