[package]
name = "breakout-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
env_logger = "0.10"
log = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }